--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book list</title>
+  <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <main>
-    <div class="book-container">
-      <ul class="book-list">
+  <div class="container">
+    <h1>My to do list</h1>
+    <input placeholder="New item" />
+    <button type="button"> Add</button>
+    <ul>
+    </ul>
 
-      </ul>
-    </div>
-  </main>
-
+  </div>
   <script src="js/script.js" type="module"></script>
 </body>
 
